fixed bag with small menu z-index

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1160,6 +1160,7 @@ footer{
         }
     }
     .small-menu{
+        min-width: 18rem !important;
         .more-menu{
             display: none;
         }
